oop-four-pillars/force-app/main/default/objects/Course__c/Course__c.object-meta.xml
<CustomObject>
    <description>Used to track courses.</description>
    <label>Course</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>