oop-four-pillars/force-app/main/default/objects/Course__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Length of a course.</description>
    <inlineHelpText>Number of days it takes to teach the course.</inlineHelpText>
    <label>Duration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>