oop-four-pillars/force-app/main/default/objects/Course__c/fields/Number_of_Courses_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Courses_Cancelled__c</fullName>
    <label># of Courses Cancelled</label>
    <summaryFilterItems>
        <field>Course_Delivery__c.Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Delivery__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>