oop-four-pillars/force-app/main/default/objects/Course__c/fields/Number_of_Courses_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Courses_Delivered__c</fullName>
    <description>Number of courses delivered.</description>
    <label># of Courses Delivered</label>
    <summaryFilterItems>
        <field>Course_Delivery__c.Status__c</field>
        <operation>equals</operation>
        <value>Delivered</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Delivery__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>